test/negative/afteruntil01.cfr
// Test for after until constraint

a
 b ?
  c ?
  d ?
  e ?
  [ after d until e ]

 
